Fixed overflow issues

--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@ body {
   margin: 0;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  overflow: hidden;
+  overflow: auto;
 }
 
 #home-div {
